[package]
name = "data_science"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ndarray = "0.15.6"
polars = { version = "0.27.2", features = ["lazy"] }
polars-core = { version = "0.27.2", features = ["ndarray"] }
polars-lazy = "0.27.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
rustlearn = "0.5.0"

[[example]]
name = "decision_tree_classification"
path = "examples/decision_tree/classification.rs"
